--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,6 +4,11 @@
     <item
         android:title="@string/setting"
         android:icon="@drawable/baseline_settings_24"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:title="@string/setting"
+        android:icon="@drawable/baseline_favorite_24"
+        app:showAsAction="ifRoom"/>
 
 </menu>
