--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,12 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/setting"
         android:title="@string/setting"
         android:icon="@drawable/baseline_settings_24"
         app:showAsAction="ifRoom"/>
 
     <item
-        android:title="@string/setting"
+        android:id="@+id/favorite"
+        android:title="@string/favorite"
         android:icon="@drawable/baseline_favorite_24"
         app:showAsAction="ifRoom"/>
 
