--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".view.activity.DetailActivity">
+    tools:context=".ui.activity.DetailActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
