--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activity.FavoriteActivity">
+    tools:context=".ui.activity.FavoriteActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_users"
