--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activity.fragment.FollowingFragment">
+    tools:context=".ui.fragment.FollowingFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
