--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".ui.activity.DetailActivity">
+    tools:context=".ui.detail.DetailActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,9 +21,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/fab_add"
+                        android:id="@+id/fab_favorite"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="16dp"
